<resources>
    <string name="app_name">MyPokemonApp</string>
    <string name="about_button">About Button</string>
    <string name="pokemon_image">Pokemon Image</string>
    <string name="pokemon">Pokemon</string>
    <string name="something_wrong">Something wrong</string>
    <string name="empty_view">No pokemon caught</string>
    <string name="waiting_to_catch_pokemon">waiting to catch pokemon…</string>
    <string name="confirm">Confirm</string>
    <string name="enter_your_pokemon_nickname">Enter your Pokemon nickname</string>
    <string name="are_you_sure_you_want_to_remove_pokemon">Are you sure you want to remove Pokemon?</string>
    <string name="main_button">Main Button</string>
    <string name="catch_button">Catch Button</string>
    <string name="back_button">Back Button</string>
    <string name="nickname">Nickname</string>
    <string name="pokemon_height_image">Pokemon Height Image</string>
    <string name="pokemon_weight_image">Pokemon weight Image</string>
    <string name="kg">48 Kg</string>
    <string name="cm">12 cm</string>
    <string name="types">Types</string>
    <string name="moves">Moves</string>
    <string name="failed_catch">Failed to catch the Pokemon!</string>
    <string name="about_image">About Image</string>
    <string name="about_app">This application has three pages, namely the Pokemon list page, the Pokemon details page, and the user\'s Pokemon list page. This application uses the API from pokeapi.co as its data source.</string>
    <string name="follow_my_github">Follow my github:</string>
    <string name="reyghifari">reyghifari</string>
    <string name="name">Name:</string>
    <string name="raihan">Kgs Muhammad Raihan Ghifari</string>
</resources>