<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rlBannerAbout"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:minHeight="200dp"
                    app:cardBackgroundColor="#A48A0C"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="2dp"
                    app:cardPreventCornerOverlap="false"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="About "
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:textColor="@color/white"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="MyPokemonApp"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:textColor="#F4E409"
                                />
                        </LinearLayout>

                        <TextView
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/about_app"
                            android:textColor="@color/white"
                            android:maxLines="9"
                            />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="8dp"
                    android:layout_alignParentEnd="true"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:contentDescription="@string/about_image"
                    android:elevation="4dp"
                    android:src="@drawable/pokeball" />

            </RelativeLayout>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_about"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rlBannerAbout"
                android:layout_marginTop="48dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="about_pokemon.json"
                app:lottie_loop="true" />

            <TextView
                android:id="@+id/tv_follow_git"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/lottie_about"
                android:text="@string/follow_my_github"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:textColor="@color/purple_700"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/tv_follow_git"
                app:layout_constraintBottom_toBottomOf="@+id/tv_follow_git"
                android:text="@string/reyghifari"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@+id/tv_follow_git"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_name_git"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_follow_git"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:textColor="@color/purple_700"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/tv_name_git"
                app:layout_constraintBottom_toBottomOf="@+id/tv_name_git"
                android:text="@string/raihan"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@+id/tv_name_git"
                android:textColor="@color/black"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>