<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_pokemon"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_pokemon_layout"
               />

            <include
                android:id="@+id/view_error_main"
                layout="@layout/view_error"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_layout_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="visible"
                app:shimmer_auto_start="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <include layout="@layout/item_placeholder_pokemon"/>
                    <include layout="@layout/item_placeholder_pokemon"/>
                    <include layout="@layout/item_placeholder_pokemon"/>
                    <include layout="@layout/item_placeholder_pokemon"/>
                    <include layout="@layout/item_placeholder_pokemon"/>
                    <include layout="@layout/item_placeholder_pokemon"/>
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <TextView
                app:layout_constraintTop_toBottomOf="@id/rv_pokemon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginTop="32dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:layout_width="match_parent"
            android:id="@+id/app_bar"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            app:fabCradleMargin="8dp"
            app:fabCradleRoundedCornerRadius="50dp"
            app:fabCradleVerticalOffset="6dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/lv_main"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView16"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:contentDescription="@string/main_button"
                        app:srcCompat="@drawable/pikachu" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lv_null"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:contentDescription="@string/catch_button"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/pokeball" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lv_catch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView18"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:contentDescription="@string/catch_button"
                        app:srcCompat="@drawable/pokeball" />
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_anchor="@id/app_bar"
            android:src="@drawable/pokecatch"
            app:tint="@color/white"
            app:maxImageSize="30dp"
            app:backgroundTint="#E1C124"
            android:contentDescription="@string/about_button" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>